--- a/spoify_ka_clone/index.html
+++ b/spoify_ka_clone/index.html
@@ -426,14 +426,14 @@
         </div>
 
         <div class="other-stuff">
-            <i class="ri-mic-line"></i>
-            <i class="ri-stack-line"></i>
-            <i class="ri-link"></i>
+            <i class="ri-mic-line" title="karoke"></i>
+            <i class="ri-stack-line" title="Stack the songs"></i>
+            <i class="ri-link" title="Link the Songs"></i>
             <div class="vol-div">
-                <i class="ri-volume-down-line"></i>
+                <i class="ri-volume-down-line" title="Volume"></i>
                 <input value="0" class="timeline" type="range">
             </div>
-            <i class="ri-picture-in-picture-line"></i>
+            <i class="ri-picture-in-picture-line"title="Picture in Picture"></i>
         </div>
 
     </footer>
