--- a/spoify_ka_clone/index.html
+++ b/spoify_ka_clone/index.html
@@ -51,7 +51,7 @@
                     </div>
 
                 </div>
-                <div class="box">
+                <!-- <div class="box">
                     <div class="img-container">
                         <i class="ri-heart-fill just_heart"></i>
                     </div>
@@ -62,7 +62,7 @@
                             <span>Playlist . 21 Songs</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </aside>
         <div class="main-focus">
@@ -103,8 +103,8 @@
                     <ul class="titles">
                         <li>#</li>
                         <li>Title</li>
-                        <li>Album</li>
-                        <li>Date added</li>
+                        <li class="Alb">Album</li>
+                        <li class="DateOfPub">Date added</li>
                         <li><i class="ri-time-line"></i></li>
                     </ul>
                 </div>
@@ -126,7 +126,7 @@
                         <li class="item">
                             <span>Album Name</span>
                         </li>
-                        <li class="item">
+                        <li class="item DateOfPub">
                             <span>Date of publication</span>
                         </li>
                         <li class="item">
@@ -171,7 +171,7 @@
                                 <span class="SoneName">Song name</span><span>Artist Name</span>
                             </div>
                         </li>
-                        <li class="item">
+                        <li class="item Alb">
                             <span>Album Name</span>
                         </li>
                         <li class="item">
