--- a/Portfolio/gallery/gal.html
+++ b/Portfolio/gallery/gal.html
@@ -1,1 +1,80 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    <link rel="stylesheet" href="galcss.css">
+</head>
+
+<body>
+    <menu>
+        <ul>
+            <li><a target="_blank" title="Home" href="#">
+                    <i class="ri-home-fill current"></i>
+                    <span>Home</span>
+                </a></li>
+            <li><a target="_blank" title="Instagram" href="https://www.instagram.com/sssahil_forget_to_lose/">
+                    <i class="ri-instagram-fill"></i>
+                    <span>Instagram</span>
+                </a></li>
+            <li><a target="_blank" title="Linkedin" href="https://www.linkedin.com/feed/">
+                    <i class="ri-linkedin-box-fill"></i>
+                    <span>Linkedin</span>
+                </a></li>
+            <li><a target="_blank" title="GitHub" href="https://github.com/sahil9396">
+                    <i class="ri-github-fill"></i>
+                    <span>Github</span>
+                </a></li>
+            <li><a target="_blank" title="Art Gallery" href="#">
+                    <i class="ri-gallery-fill"></i>
+                    <span>Arts</span>
+                </a></li>
+            <li><a target="_blank" title="Project List" href="#">
+                    <i class="ri-list-check-3"></i>
+                    <span>Projects</span>
+                </a></li>
+        </ul>
+    </menu>
+    <main>
+        <div class="image-box">
+            <div class="homescreen">
+                <img data-scroll data-scroll-speed="-10" src="leaf ganapati.png" alt="Ganapati">
+            </div>
+
+            <div class="lower">
+
+                <div class="other-images">
+                    <div class="box">
+                        <img data-scroll data-scroll-speed="1" src="monk self.png" alt="">
+                    </div>
+                    <div class="box god">
+                        <img data-scroll data-scroll-speed="1" src="OM as bg.png" alt="">
+                    </div>
+                </div>
+
+                <div class="rightt">
+
+                    <div class="rightthing">
+                        <img data-scroll data-scroll-speed="2" src="astronaut and dreamy land done yt practice.jpg"
+                            alt="">
+
+                    </div>
+                    <div class="rightthing">
+                        <img data-scroll data-scroll-speed="1" class="fitt" src="finale 2.png" alt="">
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="gallary.js"></script>
+</body>
+
+</html>
