The gallery page  animation is on going

--- a/Portfolio/gallery/gal.html
+++ b/Portfolio/gallery/gal.html
@@ -41,30 +41,31 @@
     </menu>
     <main>
         <div class="image-box">
-            <div class="homescreen">
+            <div class="homescreen entry">
                 <img data-scroll data-scroll-speed="-10" src="leaf ganapati.png" alt="Ganapati">
+                <div data-scroll data-scroll-speed="-10" class="grad"></div>
             </div>
 
             <div class="lower">
 
                 <div class="other-images">
                     <div class="box">
-                        <img data-scroll data-scroll-speed="1" src="monk self.png" alt="">
+                        <img class="sm" data-scroll data-scroll-speed="1" src="monk self.png" alt="">
                     </div>
                     <div class="box god">
-                        <img data-scroll data-scroll-speed="1" src="OM as bg.png" alt="">
+                        <img class="sm" data-scroll data-scroll-speed="1" src="OM as bg.png" alt="">
                     </div>
                 </div>
 
                 <div class="rightt">
 
                     <div class="rightthing">
-                        <img data-scroll data-scroll-speed="2" src="astronaut and dreamy land done yt practice.jpg"
+                        <img class="sm" data-scroll data-scroll-speed="2" src="astronaut and dreamy land done yt practice.jpg"
                             alt="">
 
                     </div>
                     <div class="rightthing">
-                        <img data-scroll data-scroll-speed="1" class="fitt" src="finale 2.png" alt="">
+                        <img class="sm" data-scroll data-scroll-speed="1" class="fitt" src="finale 2.png" alt="">
                     </div>
 
                 </div>
@@ -74,6 +75,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="gallary.js"></script>
 </body>
 
