--- a/Portfolio/gallery/gal.html
+++ b/Portfolio/gallery/gal.html
@@ -60,8 +60,8 @@
                 <div class="rightt">
 
                     <div class="rightthing">
-                        <img class="sm" data-scroll data-scroll-speed="2" src="astronaut and dreamy land done yt practice.jpg"
-                            alt="">
+                        <img class="sm" data-scroll data-scroll-speed="2"
+                            src="astronaut and dreamy land done yt practice.jpg" alt="">
 
                     </div>
                     <div class="rightthing">
@@ -75,8 +75,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="gallary.js"></script>
 </body>
 
