--- a/Portfolio/gallery/gal.html
+++ b/Portfolio/gallery/gal.html
@@ -14,11 +14,11 @@
     <menu>
         <ul>
             <li><a target="_blank" title="Home" href="#">
-                    <i class="ri-home-fill current"></i>
+                    <i class="ri-home-fill"></i>
                     <span>Home</span>
                 </a></li>
             <li><a target="_blank" title="Instagram" href="https://www.instagram.com/sssahil_forget_to_lose/">
-                    <i class="ri-instagram-fill"></i>
+                    <i class="ri-instagram-fill current"></i>
                     <span>Instagram</span>
                 </a></li>
             <li><a target="_blank" title="Linkedin" href="https://www.linkedin.com/feed/">
