--- a/Portfolio/gallery/gal.html
+++ b/Portfolio/gallery/gal.html
@@ -18,7 +18,7 @@
                     <span>Home</span>
                 </a></li>
             <li><a target="_blank" title="Instagram" href="https://www.instagram.com/sssahil_forget_to_lose/">
-                    <i class="ri-instagram-fill current"></i>
+                    <i class="ri-instagram-fill"></i>
                     <span>Instagram</span>
                 </a></li>
             <li><a target="_blank" title="Linkedin" href="https://www.linkedin.com/feed/">
@@ -30,7 +30,7 @@
                     <span>Github</span>
                 </a></li>
             <li><a target="_blank" title="Art Gallery" href="#">
-                    <i class="ri-gallery-fill"></i>
+                    <i class="ri-gallery-fill current"></i>
                     <span>Arts</span>
                 </a></li>
             <li><a target="_blank" title="Project List" href="#">
