Just Project Section is remaining

--- a/Portfolio/gallery/gal.html
+++ b/Portfolio/gallery/gal.html
@@ -13,7 +13,7 @@
 <body>
     <menu>
         <ul>
-            <li><a target="_blank" title="Home" href="#">
+            <li><a target="_blank" title="Home" href="../index.html">
                     <i class="ri-home-fill"></i>
                     <span>Home</span>
                 </a></li>
