The landing page is ready without any animations

--- a/Gym recorder/index.html
+++ b/Gym recorder/index.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym Help</title>
-    <link rel="stylesheet" href="./scss file/ind.css">
+    <link rel="stylesheet" href="./scss-file/ind.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <main>
         <div class="main-container">
-            <div class="Part-Name">Back-Workout</div>
+            <img src="./app-things/back.png" alt="">
+            <!-- <div class="black-thing"></div> -->
+            <div class="Part-Name">
+                <p>Back-Workout </p>
+            </div>
             <div class="List-of-exc">
                 <div class="Exc-Details">
-                    <div class="Exc-Name">Back-Rows</div>
-                    <div class="Reps">Reps</div>
-                    <div class="Weights">Weights</div>
+                    <div class="Exc-Name">back-rows</div>
+                    <div class="details">
+                        
+                        <input type="text" placeholder="Reps ..." class="Reps">
+                        <input type="text" placeholder="Weights..." class="Weights">
+                    </div>
                 </div>
                 <div class="Exc-Details">
-                    <div class="Exc-Name">Back-Rows</div>
-                    <div class="Reps">Reps</div>
-                    <div class="Weights">Weights</div>
+                    <div class="Exc-Name">back-rows</div>
+                    <div class="details">
+                        <input type="text" placeholder="Reps ..." class="Reps">
+                        <input type="text" placeholder="Weights..." class="Weights">
+                    </div>
                 </div>
                 <div class="Exc-Details">
-                    <div class="Exc-Name">Back-Rows</div>
-                    <div class="Reps">Reps</div>
-                    <div class="Weights">Weights</div>
+                    <div class="Exc-Name">back-rows</div>
+                    <div class="details">
+                        <input type="text" placeholder="Reps ..." class="Reps">
+                        <input type="text" placeholder="Weights..." class="Weights">
+                    </div>
                 </div>
                 <div class="Exc-Details">
-                    <div class="Exc-Name">Back-Rows</div>
-                    <div class="Reps">Reps</div>
-                    <div class="Weights">Weights</div>
+                    <div class="Exc-Name">back-rows</div>
+                    <div class="details">
+                        <input type="text" placeholder="Reps ..." class="Reps">
+                        <input type="text" placeholder="Weights..." class="Weights">
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 </body>
+
 </html>
