Animation is not done yet, but from here focusing on database_and_its_structure

--- a/Gym recorder/index.html
+++ b/Gym recorder/index.html
@@ -20,7 +20,7 @@
                 <p>Back-Workout </p>
             </div>
             <div class="List-of-exc">
-                <div class="Exc-Details">
+                <!-- <div class="Exc-Details">
                     <div class="Exc-Name">back-rows</div>
                     <div class="details">
                         
@@ -48,10 +48,13 @@
                         <input type="text" placeholder="Reps ..." class="Reps">
                         <input type="text" placeholder="Weights..." class="Weights">
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
+
+
+    <script type="module" src="home.js"></script>
 </body>
 
 </html>
