The gym app's form event listener is not working

--- a/Gym recorder/index.html
+++ b/Gym recorder/index.html
@@ -20,13 +20,13 @@
                 <p>Back-Workout </p>
             </div>
             <div class="List-of-exc">
-                <!-- <div class="Exc-Details">
-                    <div class="Exc-Name">back-rows</div>
-                    <div class="details">
-                        
-                        <input type="text" placeholder="Reps ..." class="Reps">
-                        <input type="text" placeholder="Weights..." class="Weights">
-                    </div>
+                <div class="Exc-Details">
+                <div class="Exc-Name">back-rows</div>
+                <form class="details">
+                    <input type="text" placeholder="Reps ..." class="Reps">
+                    <input type="text" placeholder="Weights..." class="Weights">
+                </form>
+                <!-- 
                 </div>
                 <div class="Exc-Details">
                     <div class="Exc-Name">back-rows</div>
