The portfolio has some changed effects on the home page

--- a/Gym recorder/index.html
+++ b/Gym recorder/index.html
@@ -25,7 +25,9 @@
                 <form class="details">
                     <input type="text" placeholder="Reps ..." class="Reps">
                     <input type="text" placeholder="Weights..." class="Weights">
+                    <button style="height: 50px; width: 50px; border-radius: 20px;" ></button>
                 </form>
+                <!-- display: none; -->
                 <!-- 
                 </div>
                 <div class="Exc-Details">
